<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="button_login_existing">Login With Existing Account</string>
    <string name="button_create_new_account">Create A New Account</string>
    <string name="login_message">Login with your account or create a new one</string>
    <string name="welcome_intro">Welcome to some strange shoe app!</string>
    <string name="welcome_directions">To get started, please read the instructions by clicking below.</string>
    <string name="to_instructions">Take me to them instructions!</string>
    <string name="see_shoes_button">Check out them shoes!</string>
    <string name="login_fragment_label">Login</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="instructions_fragment_label">Instructions</string>
    <string name="shoe_list_label">Shoes</string>
    <string name="show_details_label">Shoe Details</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_detail_desciription_hint">Enter Description</string>
    <string name="shoe_detail_name_hint">Enter Shoe Name</string>
    <string name="shoe_detail_company_hint">Enter Shoe Company</string>
    <string name="shoe_detail_size_hint">Enter Shoe Size</string>
    <string name="shoe_list_item_size_format">%.1f</string>
    <string name="menu_logout">Logout</string>
    <string name="instruction_intro">Here\'s what to do...</string>
    <string name="instruction_body">Click the button below then click the \"+\" button on the next screen to add your shoes.  That\'s it!</string>
</resources>
